# midi-fader

./: .gitignore  LICENSE  README.md
cad/: TR2_21_L5.wrl
firmware/: .gitignore  Makefile  README.md  STM32F042X6.ld
firmware/bootloader/: Makefile  README.md  STM32F042X6_Bootloader.ld
firmware/common/: common-bot.mak  common-top.mak  storage-segment.ld
firmware/include/: atomic.h  buttons.h  configuration.h  error.h  fader.h  mackie.h  osc.h  storage.h  systick.h  usb_app.h  usb_hid.h  usb_midi.h
firmware/openocd/: flash.cfg  openocd.cfg
firmware/scripts/: bootloader  configurator  descriptorgen.py  firmwaregen.py  storagegen.py
firmware/src/: buttons.c  configuration.c  configuration.storage.xml  fader.c  mackie.c  main.c  osc.c  storage.c  systick.c  usb.c  usb_app.c  usb_desc.c  usb_hid.c  usb_midi.c
kicad/: digital-control.sch  fp-lib-table  input.sch  midi-fader-cache.lib  midi-fader.dcm  midi-fader.kicad_pcb  midi-fader.lib  midi-fader.pro  midi-fader.sch  power-supplies.sch  sym-lib-table
kicad/gerber/: midi-fader-B.Cu.gbr  midi-fader-B.Mask.gbr  midi-fader-B.SilkS.gbr  midi-fader-Edge.Cuts.gbr  midi-fader-F.Cu.gbr  midi-fader-F.Mask.gbr  midi-fader-F.SilkS.gbr  midi-fader-NPTH.drl  midi-fader.drl
kicad/midi-fader.pretty/: BOURNS_PTA60X3.kicad_mod  HTSSOP-16-1EP_4.4x5mm_Pitch0.65mm_ThermalVias_HandSolder.kicad_mod  Nidec_Copal_TR2.kicad_mod  Wurth_TPC_3816.kicad_mod
software/: Cargo.toml  README.md
software/python/: configurator
software/src/: config.rs  gui.rs  main.rs
software/src/device/: device_udev.rs  mod.rs  unix.rs  windows.rs
(+15 files in other folders)
