[package]
name = "midi_fader"
version = "0.1.0"
authors = ["Kevin Cuzner <kevin@kevincuzner.com>"]

[dependencies]
imgui = "0.0.21"
imgui-glium-renderer = "0.0.21"
glium = "0.22"
error-chain = "0.12.0"
tokio = "0.1.11"
mio = "0.6.16"
libc = "0.2"
futures = "0.1.24"
errno = "0.2"
byteorder = "1.2"

[target.'cfg(target_os="linux")'.dependencies]
udev = "0.2.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.6", features = ["setupapi", "hidsdi"] }
