[package]
name = "midi_fader"
version = "0.1.0"
authors = ["Kevin Cuzner <kevin@kevincuzner.com>"]

[dependencies]
arrayvec = "0.4.10"
byteorder = "1.3.1"
errno = "0.2.4"
failure = "0.1.5"
futures = "0.1.25"
glium = "0.23.0"
imgui = "0.0.23"
imgui-glium-renderer = "0.0.23"
imgui-winit-support = "0.0.23"
libc = "0.2.49"
mio = "0.6.16"
paste = "0.1"
tokio = "0.1.15"

[target."cfg(target_os=\"linux\")".dependencies]
udev = "0.2.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.6", features = ["setupapi", "hidsdi"] }
